Sunday Review before Homework

--- a/homework/2ndwkHW.html
+++ b/homework/2ndwkHW.html
@@ -59,6 +59,9 @@
         이 양초는 사실상 특별한 힘을 가지고 있어요. 양초를 켜고 소원을 빌면
         짜자잔 뭐든지 이뤄지게 된답니다. 하나 사가세요! 대나무 향이 아주 좋아요.
       </h6>
+      <h6 style="font-size:10; float: left; color: blue">
+        달러-월 환율 :
+      </h6>
     </p>
 
 
