--- a/week_02/2jQuery.html
+++ b/week_02/2jQuery.html
@@ -76,6 +76,8 @@
                 <button id="btn-posting-box" onclick="openclose()" class="btn btn-primary btn-lg">포스팅박스 열기</button>
             </p>
         </div>
+
+        /// 아래의 post-box 개체에 대해서 fadeIn/fadeOut 처리  
         <div class="form-post" id="post-box" style="display:none;">
             <div>
                 <div class="form-group">
@@ -88,6 +90,8 @@
                 </div>
                 <button type="button" class="btn btn-primary">기사저장</button>
             </div>
+
+
         </div>
         <div class="card-columns">
             <div class="card">
