--- a/week_02/2jQuery.html
+++ b/week_02/2jQuery.html
@@ -31,7 +31,7 @@
             font-family: 'Stylish', sans-serif;
         }
 
-        .wrap {
+        .wrap {               /* class="wrap" 의 선택자 */
             width: 900px;
             margin: auto;
         }
@@ -41,7 +41,7 @@
             font-weight: bold;
         }
 
-        #post-box {
+        #post-box {            /*   id="post-box" 에 대한 id선택자    */
             width: 500px;
             margin: 20px auto;
             padding: 50px;
@@ -77,7 +77,8 @@
             </p>
         </div>
 
-        /// 아래의 post-box 개체에 대해서 fadeIn/fadeOut 처리  
+        <!-- 아래의 post-box 개체에 대해서 fadeIn/fadeOut 처리  -->
+        
         <div class="form-post" id="post-box" style="display:none;">
             <div>
                 <div class="form-group">
